# asusctl

./: .gitignore  CLAUDE.md  Cargo.toml
data/: asusd.rules
docs/: joyful-hopping-hedgehog.md
rog-control-center/: Cargo.toml
rog-control-center/src/ui/: mod.rs  setup_dashboard.rs
rog-control-center/ui/: globals.slint  main_window.slint  theme.slint
rog-control-center/ui/pages/: about.slint  anime.slint  app_settings.slint  aura.slint  dashboard.slint  fans.slint  hotkeys.slint  system.slint
rog-control-center/ui/types/: monitor_types.slint
rog-control-center/ui/widgets/: aura_power.slint  colour_picker.slint  common.slint  graph.slint  sidebar.slint
rog-hotkeys/: Cargo.toml
rog-hotkeys/src/: config.rs  daemon.rs  keys.rs  lib.rs  macros.rs  rog_button.rs
rog-noise-cancel/: Cargo.toml
rog-noise-cancel/src/: config.rs  engine.rs  lib.rs
rog-scenarios/: Cargo.toml
rog-scenarios/src/: config.rs  lib.rs  monitor.rs
